# ailab

./: .env  .gitignore  README.md  TODO.md  Taskfile.yml  docker-compose.yaml
ollama/: Dockerfile.amd  Dockerfile.intel  Dockerfile.nvidia  entrypoint.sh  pyproject.toml
ollama/amd/: Dockerfile
ollama/nvidia/: Dockerfile
proxy/config/: config.yaml
traefik/dynamic/: ollama.yaml  proxy.yaml
